Set nav padding-left to 690px, fix mobile header overlap

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .top-nav-inner {
   width: 860px;
   margin: 0 auto;
-  padding-left: 680px;
+  padding-left: 690px;
 }
 
 .top-nav a {
@@ -260,6 +260,10 @@ footer {
 
 /* Responsive design */
 @media print, screen and (max-width: 960px) {
+  body {
+    padding-top: 80px;
+  }
+
   div.wrapper {
     width: auto;
     margin: 0;
@@ -279,6 +283,7 @@ footer {
 
   header {
     padding-right: 0;
+    padding-top: 20px;
     text-align: center;
   }
 
